syntax = "proto3";

option go_package = "github.com/mingkaic/proto/serial";

package tenncor;

import "google/protobuf/any.proto";
import "proto/serial/data.proto";

enum OpcodeT
{
	ABS = 0;
	NEG = 1;
	NOT = 2;
	SIN = 3;
	COS = 4;
	TAN = 5;
	EXP = 6;
	LOG = 7;
	SQRT = 8;
	ROUND = 9;
	POW = 10;
	ADD = 11;
	SUB = 12;
	MUL = 13;
	DIV = 14;
	EQ = 15;
	NE = 16;
	GT = 17;
	LT = 18;
	BINO = 19;
	UNIF = 20;
	NORM = 21;
	TRANSPOSE = 22;
	FLIP = 23;
	ARGMAX = 24;
	RMAX = 25;
	RSUM = 26;
	EXPAND = 27;
	N_ELEMS = 28;
	N_DIMS = 29;
	MATMUL = 30;
	// gradient nodes (todo: remove this)
	INJACOBIAN = 31;
	OUTJACOBIAN = 32;
	JACOBIANLEFT = 33;
	JACOBIANRIGHT = 34;
	// sentinel
	_OP_SENTINEL = 35;
}

message NodePb
{
	enum NodeT
	{
		VARIABLE = 0;
		PLACEHOLDER = 1;
		CONSTANT = 2;
		FUNCTOR = 3;
	}
	NodeT type = 1;
	string label = 2;
	// takes messages:
	// VariablePb for type == VARIABLE
	// PlacePb for type == PLACEHOLDER
	// TensorPb for type == CONSTANT
	// FunctorPb for type == FUNCTOR
	google.protobuf.Any detail = 3;
}

message SourcePb
{
	enum SourceT
	{
		CONSTANT = 0;
		UNIFORM = 1;
		NORMAL = 2;
	}
	SourceT src = 1;
	TensorT dtype = 2;
	// takes messages DoubleArr, ..., 
	// Uint64Arr depending on dtype
	google.protobuf.Any settings = 3;
}

message FunctorPb
{
	OpcodeT opcode = 1;
	repeated string args = 2;
}

message PlacePb
{
	repeated uint64 allowed_shape = 1;
}

message VariablePb
{
	string varpos = 1;
	SourcePb source = 2;
	repeated uint64 allowed_shape = 3;
}

message GraphPb
{
	string gid = 1;
	repeated string create_order = 2;
	map<string, NodePb> node_map = 3;
}
